# fastapi-poc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: helm-lint-test.yaml  push-image.yaml  validate-build.yaml
app/: main.py
app/core/: config.py  logging.py
app/models/: config.py  domain.py
app/routes/: api.py
charts/: Chart.yaml  values.yaml
charts/app-chart/: .helmignore  values.yaml
charts/fastapi-poc/: Chart.yaml  values.yaml
charts/fastapi-poc/templates/: deployment.yaml
charts/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
terraform/: .terraform.lock.hcl  README.md  backend.tf  main.tf  provider.tf
tests/: test_app.py  test_routes.py
tests/fixtures/: eur_spot_price.json  gbp_spot_price.json  jpy_spot_price.json  usd_spot_price.json
