[tool.poetry]
name = "FastApiPOC"
version = "0.0.1"
description = ""

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
kubernetes = "22.6.0"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.18.1"
isort = "^5.10.1"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
